<resources>
    <string name="app_name">Homework App</string>
    <string name="app_by">Homework App by Domi04151309</string>

    <string name="nav_planner">Planner</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_source">Source code</string>

    <string name="jump_to_date">Jump to date</string>

    <string name="planner_empty">Nothing planned yet!</string>
    <string name="planner_no_description">No description provided!</string>

    <string name="new_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_title_example">Title of your task</string>
    <string name="task_description">Task Description</string>
    <string name="task_description_example">What you have to do</string>
    <string name="date">Date: %1$s</string>

    <string name="btn_done">Done</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>

    <string name="err_missing_title">Please enter a title</string>
    <string name="err_missing_title_summary">A title is important so that you can recognize the entry later</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_delete_summary">Are you sure you want to delete this item?</string>

    <string name="pref">Settings</string>
    <string name="pref_general">General Settings</string>
    <string name="pref_theme">Change theme</string>
    <string name="pref_theme_summary">Changes the look of the app</string>
    <string name="pref_planner">Planner</string>
    <string name="pref_edit_text">Advanced editing</string>
    <string name="pref_edit_text_summary">Edit the JSON string by yourself</string>
    <string name="pref_reset">Reset JSON string</string>
    <string name="pref_reset_summary">This resets the JSON string and deletes all entries</string>
    <string name="pref_reset_question">Are you sure you want to reset the JSON string and delete all entries?</string>
    <string name="pref_reset_toast">Reset the JSON string</string>
    <string name="pref_info">Information</string>
    <string name="pref_info_icons">Icons</string>
    <string name="pref_info_icons_summary">Icons by Icons8 and Google</string>
    <string name="pref_info_header">Header background</string>
    <string name="pref_info_header_summary">Header background by Nick Perez on Unsplash</string>
    <string-array name="pref_theme_array">
        <item>Light theme</item>
        <item>Dark theme</item>
        <item>Black theme</item>
    </string-array>
    <string-array name="pref_theme_array_values" translatable="false">
        <item>light</item>
        <item>dark</item>
        <item>black</item>
    </string-array>
    <string-array name="pref_info_icons_array">
        <item>Icons8\'s website</item>
        <item>Google\'s website</item>
    </string-array>

    <string name="about">About</string>
    <string name="about_summary">About the app</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_github">There may be newer versions available on <a href="https://github.com/Domi04151309/HomeworkApp">GitHub</a>. This app is and always will be free software. Do not pay for this app.</string>
    <string name="about_license">This app is distributed under the terms and conditions of the <a href="https://github.com/Domi04151309/HomeworkApp/blob/master/LICENSE">GNU General Public License v3.0</a></string>
    <string name="about_damage">I am not responsible for any damage to your device.</string>
    <string name="about_icons">Icons by <a href="https://icons8.com/">Icons8</a> and <a href="https://material.io/resources/icons/">Google</a>.</string>
</resources>
