<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="?dialogPreferredPadding"
    android:paddingEnd="?dialogPreferredPadding"
    android:paddingTop="@dimen/list_padding"
    android:paddingBottom="@dimen/list_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/doneBtn"
        android:layout_width="@dimen/list_icon_height"
        android:layout_height="@dimen/list_icon_height"
        android:focusable="false"
        android:contentDescription="@string/btn_done"
        app:srcCompat="@drawable/ic_color_done" />

    <ImageButton
        android:id="@+id/editBtn"
        android:layout_width="@dimen/list_icon_height"
        android:layout_height="@dimen/list_icon_height"
        android:focusable="false"
        android:contentDescription="@string/btn_edit"
        app:srcCompat="@drawable/ic_color_edit" />

    <ImageButton
        android:id="@+id/deleteBtn"
        android:layout_width="@dimen/list_icon_height"
        android:layout_height="@dimen/list_icon_height"
        android:focusable="false"
        android:contentDescription="@string/btn_delete"
        app:srcCompat="@drawable/ic_color_delete" />
</LinearLayout>